@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-01T16:07:50Z",
-  "count_outdated" : 1374,
-  "uniques_outdated" : 523,
+  "timestamp" : "2023-08-02T08:08:27Z",
+  "count_outdated" : 1375,
+  "uniques_outdated" : 524,
   "count" : 1450,
   "uniques" : 537,
   "views" : [
-    {
-      "timestamp": "2023-07-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-20T00:00:00Z",
       "count": 3,
