@@ -1,12 +1,7 @@
 {
-  "count": 76,
-  "uniques": 14,
+  "count": 75,
+  "uniques": 13,
   "views": [
-    {
-      "timestamp": "2023-07-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-20T00:00:00Z",
       "count": 3,
