@@ -1,3 +1,12 @@
+2023-08-02T08:08:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5736334479 # 1781
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-02
+* notice: last 14d: unq all: 13 75
+* notice: prev accum: outdated-unq outdated-all / unq all: 523 1374 / 537 1450
+* notice: next accum: outdated-unq outdated-all / unq all: 524 1375 / 537 1450
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-07-19] / []
+
 2023-08-01T16:07:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5729181591 # 1779
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-01
